--- a/src/main/webapp/level2.html
+++ b/src/main/webapp/level2.html
@@ -83,8 +83,8 @@ span[rel~=bookmark]:hover sub,	/* show the time on mouse-over / keyboard-focus *
   <span style="font-size: 10pt;" class="desc"></span>
 </div>
 
-<script src="d3.v3.min.js" type="text/javascript"></script>
-<!-- <script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script> -->
+<!-- <script src="d3.v3.min.js" type="text/javascript"></script> -->
+<script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
 <script>
 
 function getURLParameter(name) {
@@ -117,17 +117,28 @@ function rgb(array){
 
 // Our "canvas"
 var
+  mapColor='white',
   aspect = 360/840,
-  width = window.innerWidth*0.8, height = 360,
+  rawWidth = window.innerWidth*0.8,
+  width = rawWidth*0.8, height = 360,
   margin = 10,
   gridx = width/25, gridy = width*aspect/10,
   svg = d3.select('body')
           .append('svg')
             .attr('width', width).attr('height', 2*height)
-            .style('background-image', 'url("Level2.png")')
-            .style('background-repeat', 'no-repeat')
-            .style('background-size', width+"px " + (width*aspect) + "px")
-;
+            // // .style('background-image', 'url("Level2.png")')
+            // .style('background-image', 'url("d.svg")')
+            // .style('background-repeat', 'no-repeat')
+            // .style('background-size', rawWidth+"px " + (rawWidth*aspect) + "px"),
+  g = svg.append('g')
+
+  g.append('path')
+    .attr('d', 'M100 10 L700 10 L700 200 L750 200 L800 250 L760 280 L760 300 L40 300 L40 280 L0 250 L30 200 L100 200 Z')
+    .attr('id', 'level2').attr('stroke',mapColor).attr('stroke-width','4').attr('fill','none')
+    .attr('transform','scale(0.65) translate(90,0)')
+  g.append('use')
+    .attr('xlink:href','#level2')
+    .attr('transform','translate(0,260)')
 
 // level data
 var
