Add generic fallback exhibitions and full-bleed the exhibition images

--- a/src/main/webapp/level2.html
+++ b/src/main/webapp/level2.html
@@ -28,7 +28,7 @@ input[type="range"]#day::-webkit-slider-thumb{
    creative commons 3.0 attribution. share + remix this, just include "Kroc Camen" and/or "camendesign.com" in your CSS */
 /* ======================================================================================================================= */
 
-span[rel~=bookmark]		{display: block; position: relative; width: 80px; margin-bottom: 18px;
+span[rel~=bookmark]		{z-index:1;display: block; position: relative; width: 80px; margin-bottom: 18px;
 				 border: 1px solid #888885; -moz-border-radius: 5px; -webkit-border-radius: 5px;
 /* day */			 font: 28px/39px "Helvetica Neue", Arial, sans-serif; text-align: center;
 				 letter-spacing: 2px; text-decoration: none; color: #666;
@@ -62,6 +62,13 @@ span[rel~=bookmark]:hover sub,	/* show the time on mouse-over / keyboard-focus *
 
 /* ======================================================================================================================= */
 
+img.exhib {
+  position: absolute; left: 0px; top:0px; width: 100%;
+  border-radius: 10px;
+  filter: grayscale(100%) sepia(100%) opacity(20%);
+  -webkit-filter: grayscale(100%) sepia(100%) opacity(20%);
+}
+
 </style>
 <body style="background: rgb(102,102,204);">
 <div><img src="glyphicons_231_sun.png" alt="DAY"/><input style="width: 80%" id="day" type="range" min="0" max="20" value="0"/><img src="glyphicons_230_moon.png" alt="NIGHT"/></div>
@@ -78,9 +85,9 @@ span[rel~=bookmark]:hover sub,	/* show the time on mouse-over / keyboard-focus *
   <span class="max"></span>
 </div>
 
-<div class="exhib" style="text-align:right; z-index:-1; position: absolute; right: 10px; top:120px; width: 150px;">
-  <img width="100%" style="border-radius: 10px;" id="pic"></img>
-  <span style="font-size: 10pt;" class="desc"></span>
+<img class="exhib" width="100%" id="pic"></img>
+<div class="exhib" style="text-align:right; z-index:-1; position: absolute; right: 10px; top:120px; width: 650px;">
+  <span style="color: white; font-size: 10pt;" class="desc"></span>
 </div>
 
 <!-- <script src="d3.v3.min.js" type="text/javascript"></script> -->
@@ -222,7 +229,7 @@ function exhibition() {
 
   var idx = Math.round(Math.random() * options.length);
   if (options.length > idx) {
-    d3.select('div.exhib>img')
+    d3.select('img.exhib')
       .attr('src', options[idx][0])
       .attr('title', options[idx][1]);
     d3.select('div.exhib>span').html(options[idx][2]);
@@ -433,7 +440,7 @@ var timer = setInterval(callback, 200);
 <input name="year" type="hidden" value="2012"/>
 <input name="month" type="hidden" value="5"/>
 <input name="day" type="hidden" value="7"/>
-<div style="position: absolute; right: 10px; top:400px; width: 200px;"><img src="glyphicons_339_rabbit.png" alt="faster"/><input id="delay" type="range" min="20" max="1000"/><img src="glyphicons_338_turtle.png" alt="slower"/></div>
+<div style="position: absolute; right: 10px; bottom:10px; width: 200px;"><img src="glyphicons_339_rabbit.png" alt="faster"/><input id="delay" type="range" min="20" max="1000"/><img src="glyphicons_338_turtle.png" alt="slower"/></div>
 </p>
 
 <div style="width: 100%; font-size:7pt; text-align:center"><a href="http://www.glyphicons.com">glyphicons</a> in use</div>
