--- a/src/main/webapp/level2.html
+++ b/src/main/webapp/level2.html
@@ -85,9 +85,10 @@ img.exhib {
   <span class="max"></span>
 </div>
 
-<img class="exhib" width="100%" id="pic"></img>
-<div class="exhib" style="text-align:right; z-index:-1; position: absolute; right: 10px; top:120px; width: 650px;">
-  <span style="color: white; font-size: 10pt;" class="desc"></span>
+<img class="exhib" style="z-index:0;" width="100%" id="pic"></img>
+<div class="exhib" style="text-align:right; z-index:-1; font-family: 'Helvetica Neue', Arial, sans-serif; position: absolute; right: 10px; top:120px; width: 30%;">
+  <span style="color: white; font-size: 12pt;" class="title"></span>
+  <p style="text-align:justify; color: white; font-size: 10pt;" class="desc"></p>
 </div>
 
 <!-- <script src="d3.v3.min.js" type="text/javascript"></script> -->
@@ -127,12 +128,13 @@ var
   mapColor='white',
   aspect = 360/840,
   rawWidth = window.innerWidth*0.8,
+  mapScale = window.innerWidth/1400,
   width = rawWidth*0.8, height = 360,
   margin = 10,
   gridx = width/25, gridy = width*aspect/10,
   svg = d3.select('body')
           .append('svg')
-            .attr('width', width).attr('height', 2*height)
+            .attr('width', width).attr('height', 3*height)
             // // .style('background-image', 'url("Level2.png")')
             // .style('background-image', 'url("d.svg")')
             // .style('background-repeat', 'no-repeat')
@@ -142,10 +144,10 @@ var
   g.append('path')
     .attr('d', 'M100 10 L700 10 L700 200 L750 200 L800 250 L760 280 L760 300 L40 300 L40 280 L0 250 L30 200 L100 200 Z')
     .attr('id', 'level2').attr('stroke',mapColor).attr('stroke-width','4').attr('fill','none')
-    .attr('transform','scale(0.65) translate(90,0)')
+    .attr('transform','scale('+mapScale+') translate(90,0)')
   g.append('use')
     .attr('xlink:href','#level2')
-    .attr('transform','translate(0,260)')
+    .attr('transform','translate(0,'+mapScale*360+')')
 
 // level data
 var
@@ -161,11 +163,11 @@ var
     {"id": "c06",	"name": "Shop Whale Mall",	"y": 7.5, "x": 8.5, "r": 4,	"hscale": 40, "scale": 255/1683, "value": 23},
     {"id": "c07",	"name": "Level 2 Cafe",	"y": 6, "x": 23, "r": 5,	"hscale": 40, "scale": 255/1211, "value": 23},
 
-    {"id": "c08",	"name": "Level 1 Entry 1",	"y": 17, "x": 4, "r": 5,	"hscale": 40, "scale": 255/1232, "value": 23},
-    {"id": "c09",	"name": "Level 1 Entry 2",	"y": 17, "x": 5, "r": 5,	"hscale": 40, "scale": 255/2442, "value": 23},
-    {"id": "c10",	"name": "Level 1 Lift",	"y": 14, "x": 8.5, "r": 5,	"hscale": 40, "scale": 255/525, "value": 23},
-    {"id": "c11",	"name": "Level 1 Science Centre Entry 1",	"y": 17, "x": 4, "r": 5,	"hscale": 40, "scale": 255/1141, "value": 23},
-    {"id": "c12",	"name": "Level 1 Science Centre Entry 2",	"y": 17, "x": 5, "r": 5,	"hscale": 40, "scale": 255/1830, "value": 23},
+    {"id": "c08",	"name": "Level 1 Entry 1",	"y": 16, "x": 4, "r": 5,	"hscale": 40, "scale": 255/1232, "value": 23},
+    {"id": "c09",	"name": "Level 1 Entry 2",	"y": 16, "x": 5, "r": 5,	"hscale": 40, "scale": 255/2442, "value": 23},
+    {"id": "c10",	"name": "Level 1 Lift", 	"y": 13, "x": 8.5, "r": 5,	"hscale": 40, "scale": 255/525, "value": 23},
+    {"id": "c11",	"name": "Level 1 Science Centre Entry 1",	"y": 16, "x": 4, "r": 5,	"hscale": 40, "scale": 255/1141, "value": 23},
+    {"id": "c12",	"name": "Level 1 Science Centre Entry 2",	"y": 16, "x": 5, "r": 5,	"hscale": 40, "scale": 255/1830, "value": 23},
     {"id": "c13",	"name": "Level 0 Entry",	"y": 22, "x": 14.3, "r": 5,	"hscale": 40, "scale": 255/1211, "value": 23},
   ];
 
@@ -231,8 +233,9 @@ function exhibition() {
   if (options.length > idx) {
     d3.select('img.exhib')
       .attr('src', options[idx][0])
-      .attr('title', options[idx][1]);
-    d3.select('div.exhib>span').html(options[idx][2]);
+      // .attr('title', options[idx][1]);
+    d3.select('div.exhib>span.title').html(options[idx][2]);
+    d3.select('div.exhib>p.desc').html(options[idx][1]);
   }
 
 }
@@ -370,7 +373,7 @@ function update(){
     .duration(delay)
   defs.selectAll('stop.color')
     .transition().ease('linear')
-    .style('stop-color', function(l){return rgb([l.value[0],0,l.value[1]]);})
+    .style('stop-color', function(l){return rgb([l.value[0],l.value[1],0]);})
     .duration(delay)
 
   // handle weather
@@ -422,7 +425,7 @@ var callback = function(){
     document.getElementById('day').max = dayLength;
     // daySlider.transition().attr('value', count).duration(delay);
     document.getElementById('day').value = count;
-    delay = document.getElementById('delay').value;
+    delay = 1020 - document.getElementById('delay').value;
     clearInterval(timer);
     timer = setInterval(callback, delay);
     // console.log('tick: ' + count);
@@ -440,9 +443,13 @@ var timer = setInterval(callback, 200);
 <input name="year" type="hidden" value="2012"/>
 <input name="month" type="hidden" value="5"/>
 <input name="day" type="hidden" value="7"/>
-<div style="position: absolute; right: 10px; bottom:10px; width: 200px;"><img src="glyphicons_339_rabbit.png" alt="faster"/><input id="delay" type="range" min="20" max="1000"/><img src="glyphicons_338_turtle.png" alt="slower"/></div>
+<div style="position: absolute; right: 10px; bottom:10px; width: 200px;">
+<img src="glyphicons_338_turtle.png" alt="slower"/>
+<input id="delay" type="range" min="1" max="1000"/>
+<img src="glyphicons_339_rabbit.png" alt="faster"/>
+</div>
 </p>
 
-<div style="width: 100%; font-size:7pt; text-align:center"><a href="http://www.glyphicons.com">glyphicons</a> in use</div>
+<div style="position: absolute; bottom: 5px; width: 100%; font-size:10pt; text-align:center"><a style="z-index:1;" href="/govhack/docs/apidocs.html">backend</a> by Jersey, and <a style="z-index:1;" href="http://www.glyphicons.com">glyphicons</a> in use</div>
 </body>
 
