Use events that we (mostly) have data for

--- a/src/main/webapp/index2.html
+++ b/src/main/webapp/index2.html
@@ -5,6 +5,15 @@
 img {
   border-radius: 10px;
 }
+p {
+  margin-top: 2px;
+  color: silver;
+  text-align: center;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+table {
+  margin-right: 80px;
+}
   </style>
 </head>
 <body>
@@ -14,9 +23,21 @@ img {
 
 <CENTER>
 
-<H1> 
-	<span style="font-size:24px;color:white;"> Pathway to History </span> 
-</H1>
+<div style="position: absolute; right: 10px; top: 10px; float:right; margin-right: 20px; font-family: 'Helvetica Neue', Arial, sans-serif">
+<div style="color: white; font-size: 20pt;">
+	Pathways through History
+</div>
+
+<p style="font-size: 16pt;">
+	The Flaky Coders <br>
+</p>
+<span style="color: silver; font-size: 10pt;">
+	Michael Lawley<br>
+	Alejandro Metke Jimenez<br>
+	Hugo Leroux<br>
+	Louis Delachat<br>
+</span>
+</div>
 
 <table>
   <tr>
@@ -24,66 +45,62 @@ img {
     	<a href="level2.html?year=2009&month=11&day=28">
     	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2009/11/~/media/7894E1B7D843429EBADB863881A5207A.ashx?w=400&h=267&as=1" width="204" height="242" alt=""> 
     	</a>
+	<p>Nov 2009 - May 2010</p>
     </td>
     <td>
-    	<a href="level2.html?year=2009&month=12&day=09">
-    	<img src="http://www.sciencentre.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2009/12/~/media/904B252FD863401A9B1C1A770B208368.ashx?w=360&h>234&as=1" width="204" height="242" alt=""> 
-		</a>   
+    	<a href="level2.html?year=2011&month=06&day=16">
+    	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2011/06/~/media/Images/QMSB/Events%20and%20Exhibitions/Exhibitions/A%20is%20for%20Animals/animal-entrance.jpg?w=300&h=200&as=1" width="204" height="242" alt=""> 
+	</a>
+	<p>Jun 2011 - Nov 2011</p>
     </td>
     <td>
     	<a href="level2.html?year=2010&month=02&day=17">
     	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2010/02/~/media/Images/QMSB/Events%20and%20exhibitions/Exhibitions/Butterfly%20Man%20of%20Kuranda/beetle-case.jpg?w=250&h=378&as=1" width="204" height="242" alt=""> 
     	</a>
+	<p>Feb 2010 - Jul 2010</p>
     </td>
   </tr> 
   <tr>
     <td>
-    	<a href="level2.html?year=2010&month=02&day=20">
-    	<img src="http://www.qm.qld.gov.au/~/media/Images/QMSB/Events%20and%20exhibitions/Exhibitions/Bloom/brachychiton-acerifolius-thb.jpg?h=70&mw=100" width="204" height="242" alt=""> 
+    	<a href="level2.html?year=2012&month=01&day=12">
+    	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2012/01/~/media/16C95F6CDEF944E79CB72F99AD85727D.jpg?h=300&w=246&as=1" width="204" height="242" alt=""> 
     	</a>
+	<p>Jan 2012 - May 2012</p>
     </td>
     <td>
     	<a href="level2.html?year=2010&month=05&day=16">
     	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2010/05/~/media/1E8B02DB26F142C6A3CA0F86735677B6.ashx?h=251&w=300&as=1" width="204" height="242" alt=""> 
     	</a>
+	<p>May 2010 - Jul 2011</p>
     </td>
     <td>
-    	<a href="level2.html?year=2010&month=05&day=16">
-    	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2010/05/~/media/783CE5C3E4774B0EB8B6EE8AB6DEFFE2.jpg?w=400&h=273&as=1" width="204" height="242" alt=""> 
+    	<a href="level2.html?year=2012&month=03&day=24">
+    	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2012/03/~/media/DE96B3CA75F84AFA9EA490231F9B5BB8.jpg?w=200&h=302&as=1" width="204" height="242" alt=""> 
     	</a>
+	<p>Mar 2012 - Oct 2012</p>
     </td>
   </tr>
     <tr>
     <td>
-    	<a href="level2.html?year=2010&month=05&day=17">
-    	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2010/05/~/media/5F7EAFD45A894E0C83E784044D185C7B.ashx?h=377&w=250&as=1" width="204" height="242" alt=""> 
+    	<a href="level2.html?year=2012&month=06&day=12">
+    	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2012/06/~/media/Images/QMSB/Events%20and%20exhibitions/Exhibitions/Drawings%20from%20Goodna%20SS/goodna-drawings-4.jpg?w=265&h=187&as=1" width="204" height="242" alt=""> 
     	</a>	
+	<p>Jun 2012 - Jul 2013</p>
     </td>
     <td>
-    	<a href="level2.html?year=2010&month=05&day=17">
-    	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2010/05/~/media/Images/QMSB/Events%20and%20exhibitions/Exhibitions/Museum%20Zoo/museum-zoo-3.jpg?w=240&h=160&as=1" width="204" height="242" alt=""> 
+    	<a href="level2.html?year=2012&month=08&day=02">
+    	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2012/08/~/media/Images/QMSB/Events%20and%20exhibitions/Exhibitions/Dressed%20by%20the%20Best/gg-dress-vertical.jpg" width="204" height="242" alt=""> 
     	</a>
+	<p>Aug 2012 - Feb 2013</p>
     </td>
     <td>
-    	<a href="level2.html?year=2010&month=05&day=22">
-    	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2010/05/~/media/29F3512AF5F54ADB98FF99D5E41CA34C.ashx?h=315&w=250&as=1" width="204" height="242" alt=""> 
+    	<a href="level2.html?year=2012&month=11&day=23">
+    	<img src="http://www.southbank.qm.qld.gov.au/Events+and+Exhibitions/Exhibitions/2012/11/~/media/Images/QMSB/Events%20and%20exhibitions/Exhibitions/Explore-a-Saurus/explorasaurus-dino-skull-boy.jpg" width="204" height="242" title="Explore-a-saurus" alt=""> 
     	</a>
+	<p>Nov 2012 - Apr 2013</p>
     </td>
   </tr>
 </table>
-
-<H4>
-	<span style="color:white;">
-	The Flaky Coders <br>
-</H4>
-<H5>
-	<span style="color:white;">
-	Michael Lawley<br>
-	Alejandro Metke Jimenez<br>
-	Hugo Leroux<br>
-	Louis Delachat<br>
-	Australian E-Health Research Centre, CSIRO<br>
-</H5>
 
 </CENTER>
 </body>
