Link to hackspace

--- a/src/main/webapp/index2.html
+++ b/src/main/webapp/index2.html
@@ -29,7 +29,7 @@ table {
 </div>
 
 <p style="font-size: 16pt;">
-	The Flaky Coders <br>
+	<a style="color:silver;" href="http://hackerspace.govhack.org/?q=groups/pathways-through-history">The Flaky Coders</a><br>
 </p>
 <span style="color: silver; font-size: 10pt;">
 	Michael Lawley<br>
