About the project

--- a/src/main/webapp/index2.html
+++ b/src/main/webapp/index2.html
@@ -37,6 +37,8 @@ table {
 	Hugo Leroux<br>
 	Louis Delachat<br>
 </span>
+<br>
+<p><a style="color:silver;" href="about.html">about</a> the project</p>
 </div>
 
 <table>
