pointer to new flow stuff

--- a/src/main/webapp/index2.html
+++ b/src/main/webapp/index2.html
@@ -39,6 +39,7 @@ table {
 </span>
 <br>
 <p><a style="color:silver;" href="about.html">about</a> the project</p>
+<p style="font-size: 10pt; color:silver;" >We've done a little more since then on the new feature to visualise individuals arriving, wandering around the museum and leaving over the course of a day.  You can get a sneak peak here: <a style="color:grey;"  href="/govhack/flow.html?year=2012&month=06&day=01">http://115.146.85.35/govhack/flow.html</a></p>
 </div>
 
 <table>
